name:          Complexity
version:       0.1.3
cabal-version: >= 1.18
build-type:    Simple
stability:     experimental
author:        Roel van Dijk
maintainer:    vandijk.roel@gmail.com
copyright:     (c) 2009 Roel van Dijk
license:       BSD3
license-file:  LICENSE
category:      Testing
synopsis:      Empirical algorithmic complexity
description:
  Determine the complexity of functions by testing them on inputs of various sizes.

Extra-Source-Files: example.hs

library
  GHC-Options: -O2 -Wall -fno-warn-name-shadowing
  build-depends: base ==4.7.*
               , time
               , parallel == 1.*
               , transformers
               , pretty
               , colour
               , hstats
               , mtl
  exposed-modules: Test.Complexity
                   , Test.Complexity.Base
                   , Test.Complexity.Pretty
                   , Test.Complexity.Utils
  other-modules: Test.Complexity.Misc

executable "simple"
  GHC-Options: -O2 -Wall -fno-warn-name-shadowing
  build-depends: base ==4.7.*, containers, Complexity
  main-is: simple.hs
  hs-source-dirs: examples
